--- a/css/畫廊/畫廊展示項目.css
+++ b/css/畫廊/畫廊展示項目.css
@@ -10,6 +10,7 @@
 #全部UI[配色主題="赤景靑面怒視目"] {
 	--colorSidebar: #00ff00;
 	--colorSidebarItems: #520200;
+	--colorSidebarItemsHover: #ff0400;
 	--colorSidebarToggle: #520600;
 	--colorSidebarButtons: #520600;
 	--colorSidebarScrollbar: #ff0000;
@@ -37,14 +38,11 @@
 #全部UI[配色主題="薹綠水藍多視目"] {
 	--colorSidebar: transparent;
 	--colorSidebarItems: #4c48ff;
-	--colorSidebarToggle: #7f7590;
+	--colorSidebarItemsHover: #2cc074;
+	--colorSidebarToggle: #000000;
 	--colorSidebarButtons: #2cc074;
 	--colorSidebarScrollbar: #6a76fd;
 	--colorSidebarScrollbarBG: transparent;
-}
-
-#全部UI[配色主題="薹綠水藍多視目"]>#sidebar ul>li>a:hover {
-	--colorSidebarItems: #2cc074;
 }
 
 #展示>.展示項目[識別符="薹綠水藍多視目"] {
@@ -70,6 +68,7 @@
 #全部UI[配色主題="法顯東石謔諧然"] {
 	--colorSidebar: transparent;
 	--colorSidebarItems: #003e00;
+	--colorSidebarItemsHover: #00ff00;
 	--colorSidebarToggle: #003e00;
 	--colorSidebarButtons: #003e00;
 	--colorSidebarScrollbar: #00ff00;
@@ -129,16 +128,13 @@
 #全部UI[配色主題="驚悚鏡像白目黑白口美羊羊"] {
 	--colorSidebar: transparent;
 	--colorSidebarItems: #ffffff;
+	--colorSidebarItemsHover: #cda1aa;
 	--colorSidebarToggle: #cda1aa;
 	--colorSidebarButtons: #cda1aa;
 	--colorSidebarScrollbar: #cda1aa;
 	--colorSidebarScrollbarBG: transparent;
 	--colorDescription: white;
 	--colorDescriptionBG: black;
-}
-
-#全部UI[配色主題="驚悚鏡像白目黑白口美羊羊"]>#sidebar ul>li>a:hover {
-	--colorSidebarItems: #cda1aa;
 }
 
 #展示>.展示項目[識別符="驚悚鏡像白目黑白口美羊羊"] {
@@ -163,16 +159,13 @@
 #全部UI[配色主題="貓和老鼠錯亂房間"] {
 	--colorSidebar: #9a360b;
 	--colorSidebarItems: #dca934;
+	--colorSidebarItemsHover: #9dc172;
 	--colorSidebarToggle: #9a360b;
 	--colorSidebarButtons: #dca934;
 	--colorSidebarScrollbar: #dca934;
 	--colorSidebarScrollbarBG: #9a360b;
 	--colorDescription: white;
 	--colorDescriptionBG: black;
-}
-
-#全部UI[配色主題="貓和老鼠錯亂房間"]>#sidebar ul>li>a:hover {
-	--colorSidebarItems: #9dc172;
 }
 
 #展示>.展示項目[識別符="貓和老鼠錯亂房間"] {
@@ -198,16 +191,13 @@
 #全部UI[配色主題="滥恩，停滥倅發病"] {
 	--colorSidebar: transparent;
 	--colorSidebarItems: #000000;
+	--colorSidebarItemsHover: #c5b099;
 	--colorSidebarToggle: #000000;
 	--colorSidebarButtons: #000000;
 	--colorSidebarScrollbar: #000000;
 	--colorSidebarScrollbarBG: transparent;
 	--colorDescription: white;
 	--colorDescriptionBG: #000000;
-}
-
-#全部UI[配色主題="滥恩，停滥倅發病"]>#sidebar ul>li>a:hover {
-	--colorSidebarItems: #c5b099;
 }
 
 #展示>.展示項目[識別符="滥恩，停滥倅發病"] {
@@ -235,6 +225,7 @@
 #全部UI[配色主題="仌屍"] {
 	--colorSidebar: #ff0000;
 	--colorSidebarItems: #0ef4f2;
+	--colorSidebarItemsHover: #0ef4f2;
 	--colorSidebarToggle: #ff0000;
 	--colorSidebarButtons: #ff0000;
 	--colorSidebarScrollbar: #0ef4f2;
@@ -266,16 +257,13 @@
 #全部UI[配色主題="栗炭千唯悪靈"] {
 	--colorSidebar: transparent;
 	--colorSidebarItems: #d41314;
+	--colorSidebarItemsHover: #66dae0;
 	--colorSidebarToggle: #66dae0;
 	--colorSidebarButtons: #66dae0;
 	--colorSidebarScrollbar: #66dae0;
 	--colorSidebarScrollbarBG: transparent;
 	--colorDescription: white;
 	--colorDescriptionBG: #000000;
-}
-
-#全部UI[配色主題="栗炭千唯悪靈"]>#sidebar ul>li>a:hover {
-	--colorSidebarItems: #66dae0;
 }
 
 #展示>.展示項目[識別符="栗炭千唯悪靈"] {
@@ -304,6 +292,7 @@
 #全部UI[配色主題="病禍"] {
 	--colorSidebar: transparent;
 	--colorSidebarItems: #000000;
+	--colorSidebarItemsHover: #000000;
 	--colorSidebarToggle: #000000;
 	--colorSidebarButtons: #000000;
 	--colorSidebarScrollbar: #000000;
@@ -338,16 +327,13 @@
 #全部UI[配色主題="ちいかわ"] {
 	--colorSidebar: transparent;
 	--colorSidebarItems: #000000;
+	--colorSidebarItemsHover: #ffedcf;
 	--colorSidebarToggle: #000000;
 	--colorSidebarButtons: #000000;
 	--colorSidebarScrollbar: #000000;
 	--colorSidebarScrollbarBG: transparent;
 	--colorDescription: white;
 	--colorDescriptionBG: #000000;
-}
-
-#全部UI[配色主題="ちいかわ"]>#sidebar ul>li>a:hover {
-	--colorSidebarItems: #ffedcf;
 }
 
 #展示>.展示項目[識別符="ちいかわ"] {
@@ -376,16 +362,13 @@
 #全部UI[配色主題="春日歩持刀可愛核"] {
 	--colorSidebar: #fdd5e8;
 	--colorSidebarItems: #ff669d;
+	--colorSidebarItemsHover: #0f1316;
 	--colorSidebarToggle: #fe659c;
-	--colorSidebarButtons: #fdd5e8;
+	--colorSidebarButtons: #ff669d;
 	--colorSidebarScrollbar: #f3a3ca;
 	--colorSidebarScrollbarBG: transparent;
 	--colorDescription: white;
 	--colorDescriptionBG: #000000;
-}
-
-#全部UI[配色主題="春日歩持刀可愛核"]>#sidebar ul>li>a:hover {
-	--colorSidebarItems: #0f1316;
 }
 
 #展示>.展示項目[識別符="春日歩持刀可愛核"] {
@@ -420,14 +403,11 @@
 #全部UI[配色主題="赤目"] {
 	--colorSidebar: transparent;
 	--colorSidebarItems: #7e0000;
+	--colorSidebarItemsHover: #d10000;
 	--colorSidebarToggle: #7e0000;
 	--colorSidebarButtons: #7e0000;
 	--colorSidebarScrollbar: #7e0000;
 	--colorSidebarScrollbarBG: transparent;
-}
-
-#全部UI[配色主題="赤目"]>#sidebar ul>li>a:hover {
-	--colorSidebarItems: #d10000;
 }
 
 #展示>.展示項目[識別符="赤目"] {
@@ -456,17 +436,50 @@
 }
 
 
+#全部UI[配色主題="木紫雷擊"] {
+	--colorSidebar: transparent;
+	--colorSidebarItems: #ff00ff;
+	--colorSidebarItemsHover: #ff00ff;
+	--colorSidebarToggle: #ff00ff;
+	--colorSidebarButtons: #ff00ff;
+	--colorSidebarScrollbar: #ff80ff;
+	--colorSidebarScrollbarBG: transparent;
+}
+
+#展示>.展示項目[識別符="木紫雷擊"] {
+	flex-grow: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+
+#展示>.展示項目[識別符="木紫雷擊"]>img {
+	position: absolute;
+	height: 85%;
+	top: 0;
+	right: 0;
+	image-rendering: pixelated;
+	pointer-events: none;
+	z-index: -99998;
+}
+
+#展示>.展示項目[識別符="木紫雷擊"]>div.BG {
+	background: #ffffff;
+	background-size: contain;
+	z-index: -99999;
+}
+
+
 #全部UI[配色主題="灋顯東石"] {
 	--colorSidebar: transparent;
 	--colorSidebarItems: #0a0809;
+	--colorSidebarItemsHover: #ff00ff;
 	--colorSidebarToggle: #0a0809;
 	--colorSidebarButtons: #0a0809;
 	--colorSidebarScrollbar: #0a0809;
 	--colorSidebarScrollbarBG: transparent;
-}
-
-#全部UI[配色主題="灋顯東石"]>#sidebar ul>li>a:hover {
-	--colorSidebarItems: #ff00ff;
 }
 
 #展示>.展示項目[識別符="灋顯東石"] {
@@ -499,6 +512,7 @@
 #全部UI[配色主題="夢"] {
 	--colorSidebar: transparent;
 	--colorSidebarItems: #000000;
+	--colorSidebarItemsHover: #000000;
 	--colorSidebarToggle: #000000;
 	--colorSidebarButtons: #000000;
 	--colorSidebarScrollbar: #000000;
@@ -531,6 +545,7 @@
 #全部UI[配色主題="水啚丹它甲骨文"] {
 	--colorSidebar: transparent;
 	--colorSidebarItems: #000000;
+	--colorSidebarItemsHover: #000000;
 	--colorSidebarToggle: #000000;
 	--colorSidebarButtons: #000000;
 	--colorSidebarScrollbar: #000000;
@@ -563,14 +578,15 @@
 #全部UI[配色主題="天国栗炭千唯"] {
 	--colorSidebar: transparent;
 	--colorSidebarItems: #40263c;
+	--colorSidebarItemsHover: #2a2b5e;
 	--colorSidebarToggle: #40263c;
 	--colorSidebarButtons: #40263c;
 	--colorSidebarScrollbar: #40263c;
 	--colorSidebarScrollbarBG: transparent;
 }
 
-#全部UI[配色主題="天国栗炭千唯"]>#sidebar ul>li>a:hover {
-	--colorSidebarItems: #2a2b5e;
+#全部UI[配色主題="天国栗炭千唯"]>#sidebar {
+	backdrop-filter: blur(0px);
 }
 
 #展示>.展示項目[識別符="天国栗炭千唯"] {
@@ -599,14 +615,11 @@
 #全部UI[配色主題="合息"] {
 	--colorSidebar: transparent;
 	--colorSidebarItems: #000000;
+	--colorSidebarItemsHover: #0000ff;
 	--colorSidebarToggle: #000000;
 	--colorSidebarButtons: #000000;
 	--colorSidebarScrollbar: #000000;
 	--colorSidebarScrollbarBG: transparent;
-}
-
-#全部UI[配色主題="合息"]>#sidebar ul>li>a:hover {
-	--colorSidebarItems: #0000ff;
 }
 
 #全部UI[配色主題="合息"]>#sidebar {
@@ -639,14 +652,11 @@
 #全部UI[配色主題="赤目IMG"] {
 	--colorSidebar: transparent;
 	--colorSidebarItems: #000000;
+	--colorSidebarItemsHover: #fd0600;
 	--colorSidebarToggle: #000000;
 	--colorSidebarButtons: #000000;
 	--colorSidebarScrollbar: #000000;
 	--colorSidebarScrollbarBG: transparent;
-}
-
-#全部UI[配色主題="赤目IMG"]>#sidebar ul>li>a:hover {
-	--colorSidebarItems: #fd0600;
 }
 
 #展示>.展示項目[識別符="赤目IMG"] {
@@ -674,14 +684,11 @@
 #全部UI[配色主題="天に召される"] {
 	--colorSidebar: transparent;
 	--colorSidebarItems: #000000;
+	--colorSidebarItemsHover: #ffffff;
 	--colorSidebarToggle: #000000;
 	--colorSidebarButtons: #000000;
 	--colorSidebarScrollbar: #021f95;
 	--colorSidebarScrollbarBG: transparent;
-}
-
-#全部UI[配色主題="天に召される"]>#sidebar ul>li>a:hover {
-	--colorSidebarItems: #ffffff;
 }
 
 #全部UI[配色主題="天に召される"]>#sidebar {
@@ -708,4 +715,266 @@
 	background-size: cover;
 	z-index: -99999;
 	filter: blur(70px);
+}
+
+
+#全部UI[配色主題="階梯"] {
+	--colorSidebar: transparent;
+	--colorSidebarItems: #070602;
+	--colorSidebarItemsHover: #6f936c;
+	--colorSidebarToggle: #070602;
+	--colorSidebarButtons: #6f936c;
+	--colorSidebarScrollbar: #1c1b16;
+	--colorSidebarScrollbarBG: transparent;
+}
+
+
+#全部UI[配色主題="階梯"]>#sidebar {
+	backdrop-filter: blur(0px);
+}
+
+#展示>.展示項目[識別符="階梯"] {
+	flex-grow: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+
+#展示>.展示項目[識別符="階梯"]>img {
+	height: 60%;
+	image-rendering: pixelated;
+	pointer-events: none;
+}
+
+#展示>.展示項目[識別符="階梯"]>div.BG {
+	background: url("/assets/圖象/畫廊/階梯.jpg");
+	background-size: cover;
+	z-index: -99999;
+	filter: blur(70px);
+}
+
+
+#全部UI[配色主題="綠色和鏡子"] {
+	--colorSidebar: transparent;
+	--colorSidebarItems: #041203;
+	--colorSidebarItemsHover: #08a017;
+	--colorSidebarToggle: #041203;
+	--colorSidebarButtons: #08a017;
+	--colorSidebarScrollbar: #0d460c;
+	--colorSidebarScrollbarBG: transparent;
+}
+
+#全部UI[配色主題="綠色和鏡子"]>#sidebar {
+	backdrop-filter: blur(0px);
+}
+
+#展示>.展示項目[識別符="綠色和鏡子"] {
+	flex-grow: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+
+#展示>.展示項目[識別符="綠色和鏡子"]>img {
+	height: 60%;
+	pointer-events: none;
+	image-rendering: pixelated;
+}
+
+#展示>.展示項目[識別符="綠色和鏡子"]>div.BG {
+	z-index: -99999;
+	filter: blur(70px);
+	background-size: cover;
+	background: url("/assets/圖象/畫廊/綠色和鏡子.jpg");
+}
+
+
+#全部UI[配色主題="trollFace泉此方"] {
+	--colorSidebar: transparent;
+	--colorSidebarItems: hsl(242, 25%, 30%);
+	--colorSidebarItemsHover: #536ba7;
+	--colorSidebarToggle: #fcf2cf;
+	--colorSidebarButtons: #fcf2cf;
+	--colorSidebarScrollbar: #4c4a7c;
+	--colorSidebarScrollbarBG: transparent;
+}
+
+#全部UI[配色主題="trollFace泉此方"]>#sidebar {
+	backdrop-filter: blur(0px);
+}
+
+#展示>.展示項目[識別符="trollFace泉此方"] {
+	width: 100%;
+	height: 100%;
+	flex-grow: 1;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	image-rendering: pixelated;
+}
+
+#展示>.展示項目[識別符="trollFace泉此方"]>div[我是="填充"] {
+	border-radius: 4px;
+	width: 100%;
+	height: 100%;
+	background: url("/assets/圖象/畫廊/trollFace泉此方.jpg");
+	background-size: 100px;
+	margin-left: 40px;
+}
+
+#展示>.展示項目[識別符="trollFace泉此方"]>div.BG {
+	z-index: -99999;
+	filter: blur(70px);
+	background-size: cover;
+	background: url("/assets/圖象/畫廊/trollFace泉此方.jpg");
+}
+
+
+#全部UI[配色主題="泉此方ダリット"] {
+	--colorSidebar: transparent;
+	--colorSidebarItems: #80f11d;
+	--colorSidebarItemsHover: #ede04c;
+	--colorSidebarToggle: #ede04c;
+	--colorSidebarButtons: #ede04c;
+	--colorSidebarScrollbar: #80f11d;
+	--colorSidebarScrollbarBG: transparent;
+}
+
+#全部UI[配色主題="泉此方ダリット"]>#sidebar {
+	backdrop-filter: blur(0px);
+}
+
+#展示>.展示項目[識別符="泉此方ダリット"] {
+	width: 100%;
+	height: 100%;
+	flex-grow: 1;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+#展示>.展示項目[識別符="泉此方ダリット"]>img {
+	height: 60%;
+	margin-left: 40px;
+	pointer-events: none;
+	image-rendering: pixelated;
+}
+
+#展示>.展示項目[識別符="泉此方ダリット"]>div.BG {
+	z-index: -99999;
+	filter: blur(70px);
+	background-size: cover;
+	background: url("/assets/圖象/畫廊/泉此方ダリット.jpg");
+}
+
+
+#全部UI[配色主題="泉此方殺赤"] {
+	--colorSidebar: transparent;
+	--colorSidebarItems: #000000;
+	--colorSidebarItemsHover: #000000;
+	--colorSidebarToggle: #000000;
+	--colorSidebarButtons: #000000;
+	--colorSidebarScrollbar: #000000;
+	--colorSidebarScrollbarBG: transparent;
+}
+
+#全部UI[配色主題="泉此方殺赤"]>#sidebar {
+	backdrop-filter: blur(0px);
+}
+
+#展示>.展示項目[識別符="泉此方殺赤"] {
+	width: 100%;
+	height: 100%;
+	flex-grow: 1;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+#展示>.展示項目[識別符="泉此方殺赤"]>img {
+	height: 60%;
+	margin-left: 40px;
+	pointer-events: none;
+	image-rendering: pixelated;
+}
+
+#展示>.展示項目[識別符="泉此方殺赤"]>div.BG {
+	z-index: -99999;
+	background-size: cover;
+	background: #ad1110;
+}
+
+
+#全部UI[配色主題="泉此方水図旦佗"] {
+	--colorSidebar: transparent;
+	--colorSidebarItems: #6f92db;
+	--colorSidebarItemsHover: transparent;
+	--colorSidebarToggle: #d71a1a;
+	--colorSidebarButtons: #d71a1a;
+	--colorSidebarScrollbar: #d71a1a;
+	--colorSidebarScrollbarBG: transparent;
+}
+
+#全部UI[配色主題="泉此方水図旦佗"]>#sidebar {
+	backdrop-filter: blur(0px);
+}
+
+#展示>.展示項目[識別符="泉此方水図旦佗"] {
+	width: 100%;
+	height: 100%;
+	flex-grow: 1;
+	display: flex;
+	justify-content: right;
+}
+
+#展示>.展示項目[識別符="泉此方水図旦佗"]>img {
+	height: 60%;
+	pointer-events: none;
+	image-rendering: pixelated;
+}
+
+#展示>.展示項目[識別符="泉此方水図旦佗"]>div.BG {
+	z-index: -99999;
+	background-size: cover;
+	background: #000000;
+}
+
+
+#全部UI[配色主題="不人面泉此方"] {
+	--colorSidebar: transparent;
+	--colorSidebarItems: #0101b1;
+	--colorSidebarItemsHover: transparent;
+	--colorSidebarToggle: #36e532;
+	--colorSidebarButtons: #ec0002;
+	--colorSidebarScrollbar: hsl(17, 68%, 20%);
+	--colorSidebarScrollbarBG: transparent;
+}
+
+#全部UI[配色主題="不人面泉此方"]>#sidebar {
+	backdrop-filter: blur(0px);
+}
+
+#展示>.展示項目[識別符="不人面泉此方"] {
+	width: 100%;
+	height: 100%;
+	flex-grow: 1;
+	display: flex;
+	justify-content: right;
+}
+
+#展示>.展示項目[識別符="不人面泉此方"]>img {
+	height: 60%;
+	margin-left: 40px;
+	pointer-events: none;
+	image-rendering: pixelated;
+}
+
+#展示>.展示項目[識別符="不人面泉此方"]>div.BG {
+	z-index: -99999;
+	background-size: cover;
+	background: #000000;
 }
