日誌/映射書文/日誌txt格式化
更新

--- a/css/index.css
+++ b/css/index.css
@@ -365,5 +365,5 @@ div.塊>a:hover {
 }
 
 #AppsWindow .window-body a:hover {
-	text-decoration: underline;
+	text-decoration: underline solid 1px;
 }
